# uni-diffsim

./: .gitignore  BENCHMARK.md  README.md  REFERENCES.md  pyproject.toml  research-plan.md  research-prompt.md
.cursor/rules/: markdown.mdc  plotting.mdc  web-style-blog.mdc  writing-blog.mdc
.github/workflows/: tests.yml
.jules/: bolt.md
docs/: ESH_INSTABILITY.md  WCA_APPLICATIONS.md
scripts/: benchmark_device.py  benchmark_forward_vs_adjoint.py  benchmark_verlet_neighborlist.py  debug_esh_instability.py  demo_contrastive_divergence.py  demo_ghost_gradient.py  demo_ghost_henon_heiles.py  demo_girsanov.py  demo_gradient_estimators.py  demo_integrators.py  demo_nonequilibrium.py  demo_nosehoover_adjoint.py  demo_optimal_baseline.py  demo_potentials.py  demo_variance_bias_tradeoff.py  demo_wca_solvation_design.py  experiment_dt_optimization.py  gradient_methods_comparison.py  nonequilibrium_demos.py  optimize_mass_matrix.py  visualize_gradient_atlas.py  viz_trajectories.py
tests/: __init__.py  test_adjoint_methods.py  test_checkpointing.py  test_gradient_estimators.py  test_integrators.py  test_neural_ode_style.py  test_potentials.py  test_verlet_batched.py
uni_diffsim/: __init__.py  device.py  ghost_gradient.py  gradient_estimators.py  integrators.py  plotting.py  potentials.py
