[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uni-diffsim"
version = "0.1.0"
description = "Unified differentiable molecular simulations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["uni_diffsim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

